Небольшие исправления звука, финального экрана

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,11 @@ project(shakalaka)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w")
 
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Bstatic,--whole-archive -lwinpthread -Wl,--no-whole-archive")
 
+set(CMAKE_CXX_STANDARD_LIBRARIES "-static-libgcc -static-libstdc++ -lwsock32 -lws2_32 ${CMAKE_CXX_STANDARD_LIBRARIES}")
+
+#C:\Program Files\mingw-w64\x86_64-8.1.0-posix-seh-rt_v6-rev0\mingw64\bin
 set(SOURCE Sbasic.cpp units.cpp Field.cpp SHAKAL.cpp player.cpp GUI.cpp)
 
 list(TRANSFORM SOURCE PREPEND "src/")
@@ -18,6 +22,6 @@ find_package(SFML REQUIRED COMPONENTS window graphics audio network)
 
 add_executable(shakalaka main.cpp ${SOURCE})
 
-target_link_libraries(shakalaka sfml-graphics sfml-audio sfml-network)
+target_link_libraries(shakalaka sfml-window sfml-graphics sfml-audio)
 
 include_directories(/)
